[package]
name = "hatswitch"
version = "0.1.0"
authors = ["leo60228 <iakornfeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.9"
byteorder = "1.3.2"
crc = "1.9.0"
structopt = "0.3.3"
walkdir = "2.2.9"

[dependencies.nom]
git = "https://github.com/Jibbow/nom.git"
branch = "master"
